--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, intial-scale=1.0">
+    <link type="text/css" href="style.css" rel="stylesheet">
     <title>Hello World</title>
 </head>
 <body>
